test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_close_expr.draco
proc main() void : a := close(ch); corp;

