test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_hex_const_wrong_letter.draco
proc main() void : a := 0x1g; corp;

